feat(app): 增加文档概览功能及数据结构
